# ResourceManagerCLI

./: Cargo.toml  bar.rs  consts.rs  ddt.rs  loc.rs  main.rs
srs/ddt/: dxt.rs  tga.rs
