[package]
name = "resource_manager"
version = "5.0.0"
authors = ["VladTheJunior VladTheJunior@gmail.com"]
edition = "2018"
description = "Resource Manager Command Line Tool"
license = "MIT"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
